@@ -2888,9 +2888,26 @@ name|get
 argument_list|(
 name|topOp
 argument_list|)
+argument_list|,
+name|opProcCtx
+operator|.
+name|getConf
+argument_list|()
+argument_list|,
+name|alias_id
 argument_list|)
 expr_stmt|;
 block|}
+block|}
+catch|catch
+parameter_list|(
+name|SemanticException
+name|e
+parameter_list|)
+block|{
+throw|throw
+name|e
+throw|;
 block|}
 catch|catch
 parameter_list|(
