@@ -57,6 +57,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|List
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|Map
 import|;
 end_import
@@ -99,9 +109,9 @@ name|hadoop
 operator|.
 name|hive
 operator|.
-name|metastore
+name|conf
 operator|.
-name|MetaStoreUtils
+name|HiveConf
 import|;
 end_import
 
@@ -405,6 +415,24 @@ name|ql
 operator|.
 name|parse
 operator|.
+name|ErrorMsg
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hive
+operator|.
+name|ql
+operator|.
+name|parse
+operator|.
 name|ParseContext
 import|;
 end_import
@@ -442,6 +470,24 @@ operator|.
 name|parse
 operator|.
 name|SemanticException
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hive
+operator|.
+name|ql
+operator|.
+name|plan
+operator|.
+name|exprNodeColumnDesc
 import|;
 end_import
 
@@ -717,6 +763,7 @@ return|return
 name|pctx
 return|;
 block|}
+comment|/**    * Get the partition list for the table that satisfies the partition pruner    * condition.    *     * @param tab    the table object for the alias    * @param prunerExpr  the pruner expression for the alias    * @param conf   for checking whether "strict" mode is on.    * @param alias  for generating error message only.    * @return    * @throws HiveException    */
 specifier|public
 specifier|static
 name|PrunedPartitionList
@@ -727,6 +774,12 @@ name|tab
 parameter_list|,
 name|exprNodeDesc
 name|prunerExpr
+parameter_list|,
+name|HiveConf
+name|conf
+parameter_list|,
+name|String
+name|alias
 parameter_list|)
 throws|throws
 name|HiveException
@@ -1024,6 +1077,64 @@ argument_list|(
 name|ois
 argument_list|)
 decl_stmt|;
+comment|// If the "strict" mode is on, we have to provide partition pruner for each table.
+if|if
+condition|(
+literal|"strict"
+operator|.
+name|equalsIgnoreCase
+argument_list|(
+name|HiveConf
+operator|.
+name|getVar
+argument_list|(
+name|conf
+argument_list|,
+name|HiveConf
+operator|.
+name|ConfVars
+operator|.
+name|HIVEMAPREDMODE
+argument_list|)
+argument_list|)
+condition|)
+block|{
+if|if
+condition|(
+operator|!
+name|hasColumnExpr
+argument_list|(
+name|prunerExpr
+argument_list|)
+condition|)
+block|{
+throw|throw
+operator|new
+name|SemanticException
+argument_list|(
+name|ErrorMsg
+operator|.
+name|NO_PARTITION_PREDICATE
+operator|.
+name|getMsg
+argument_list|(
+literal|"for Alias \""
+operator|+
+name|alias
+operator|+
+literal|"\" Table \""
+operator|+
+name|tab
+operator|.
+name|getName
+argument_list|()
+operator|+
+literal|"\""
+argument_list|)
+argument_list|)
+throw|;
+block|}
+block|}
 comment|// evaluate the expression tree
 if|if
 condition|(
@@ -1269,6 +1380,16 @@ block|}
 block|}
 catch|catch
 parameter_list|(
+name|HiveException
+name|e
+parameter_list|)
+block|{
+throw|throw
+name|e
+throw|;
+block|}
+catch|catch
+parameter_list|(
 name|Exception
 name|e
 parameter_list|)
@@ -1292,6 +1413,93 @@ name|unkn_parts
 argument_list|,
 name|denied_parts
 argument_list|)
+return|;
+block|}
+comment|/**    * Whether the expression contains a column node or not.    */
+specifier|public
+specifier|static
+name|boolean
+name|hasColumnExpr
+parameter_list|(
+name|exprNodeDesc
+name|desc
+parameter_list|)
+block|{
+comment|// Return false for null
+if|if
+condition|(
+name|desc
+operator|==
+literal|null
+condition|)
+block|{
+return|return
+literal|false
+return|;
+block|}
+comment|// Return true for exprNodeColumnDesc
+if|if
+condition|(
+name|desc
+operator|instanceof
+name|exprNodeColumnDesc
+condition|)
+block|{
+return|return
+literal|true
+return|;
+block|}
+comment|// Return true in case one of the children is column expr.
+name|List
+argument_list|<
+name|exprNodeDesc
+argument_list|>
+name|children
+init|=
+name|desc
+operator|.
+name|getChildren
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|children
+operator|.
+name|size
+argument_list|()
+condition|;
+name|i
+operator|++
+control|)
+block|{
+if|if
+condition|(
+name|hasColumnExpr
+argument_list|(
+name|children
+operator|.
+name|get
+argument_list|(
+name|i
+argument_list|)
+argument_list|)
+condition|)
+block|{
+return|return
+literal|true
+return|;
+block|}
+block|}
+comment|// Return false otherwise
+return|return
+literal|false
 return|;
 block|}
 block|}
